<resources>
    <string name="app_name">WSR Food</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

    <string name="hello_world">Hello Square World!</string>
    <string name="round">round</string>
    <string name="splashscreen_ic">SplashScreen_ic</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="button">Button</string>
</resources>